# DataAgentix

./: README.md  main.py  pyproject.toml
agents/: agents.py
app/: gradio_ui.py
data/cleaned/: data.csv
data/raw/: data.csv
models/: linear_regression_model.joblib  random_forest_regressor_model.joblib
tools/: data_tools.py  doc_tools.py  ml_tools.py
utils/: prompt_refinement.py
