[project]
name = "dataagentix"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.4.2",
    "gradio>=6.3.0",
    "joblib>=1.5.3",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "reportlab>=4.4.9",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "smolagents[litellm]>=1.23.0",
]
